--- a/css/styles.css
+++ b/css/styles.css
@@ -1687,35 +1687,43 @@ a.footer_link{
   }
  
 
+/*-----------------------------------------------------------------------*/
+ /*------------- Estilios página Medios de pago -------------------------*/
+ /*-----------------------------------------------------------------------*/
+ 
+ .pay_title{
+    background-color: var(--clr-main);
+    font-size: 2.5rem;
+    color: var(--clr-white);
+    padding-top: 2rem;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.pay_media{
+    width: 90%;
+    margin: 2rem auto;
+    padding: 1rem 2rem;
+    box-shadow: 5px 5px 10px 0 var(--clr-darker);
+    border-radius: 2rem;
+}
 
+.pay_media h2{
+    font-size: 2rem;
+    color: var(--clr-main);
+    padding: 1rem 2rem;   
+}
 
+.pay_media p{
+    color: var(--clr-clearer);
+}
+.pay_logo{
+    width: 100%;    
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.pay_logo img{
+    margin: 1rem;
+}
 
 
 
