--- a/css/styles.css
+++ b/css/styles.css
@@ -1687,43 +1687,76 @@ a.footer_link{
   }
  
 
-/*-----------------------------------------------------------------------*/
- /*------------- Estilios página Medios de pago -------------------------*/
- /*-----------------------------------------------------------------------*/
- 
- .pay_title{
-    background-color: var(--clr-main);
-    font-size: 2.5rem;
-    color: var(--clr-white);
-    padding-top: 2rem;
+  /*-----------------------------------------------------------------------*/
+ /*------------- Formularios de inicio y registro -----------------*/
+ /*-----------------------------------------------------------------------*/ 
+ .fondo{
     display: flex;
     justify-content: center;
-    text-align: center;
-}
-.pay_media{
-    width: 90%;
-    margin: 2rem auto;
-    padding: 1rem 2rem;
-    box-shadow: 5px 5px 10px 0 var(--clr-darker);
-    border-radius: 2rem;
 }
 
-.pay_media h2{
-    font-size: 2rem;
-    color: var(--clr-main);
-    padding: 1rem 2rem;   
+#form_registro #id_container_registro{
+    margin-top: 125px;
 }
 
-.pay_media p{
-    color: var(--clr-clearer);
-}
-.pay_logo{
-    width: 100%;    
+.container_registro{
+    width: 400px;
+    background-color: rgb(245, 240, 240);
+    margin-top: 150px;
+    padding: 30px;
+    box-shadow: 7px 13px 37px #360808;
 }
 
-.pay_logo img{
-    margin: 1rem;
+.container_registro form .colp input{
+   width: 350px; 
 }
+
+.container_registro h1{ 
+    margin-bottom: 10px;
+}
+
+.colp input{
+    outline: none;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid sandybrown;
+    font-size: 15px;
+}
+
+.container_registro .ingresar{
+    margin: 0px 14px;
+    width: 93%;
+}
+
+.resgistrarme a{
+    margin-left: 5px;
+}
+
+.falla {
+    margin-top: 10px;
+    margin-left: 20px;
+    font-size: 12px;
+    color: red;
+    font-weight: 600;
+}
+
+.formulario_error input{
+    outline: none;
+    width: 87%;
+    padding: 10px;
+    border: 1px solid red;
+    background-color: rgb(247, 236, 236);
+    font-size: 15px;
+}
+.formulario_ok input{
+    outline: none;
+    width: 87%;
+    padding: 10px;
+    border: 1px solid sandybrown;
+    font-size: 15px;
+    margin-bottom: 25px;
+}
+
 
 
 
