--- a/css/styles.css
+++ b/css/styles.css
@@ -1443,6 +1443,158 @@ a.footer_link{
     
  
  
+/*-------------------------------------------------------------*/
+
+/*------------- Estilios página Administración----------------*/
+
+/*-------------------------------------------------------------*/
+.btnClose{
+    display: flex;
+    justify-content: end;
+    margin-right: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+.btnClose button{
+    padding: .3rem  .5rem;
+    font-size: .8rem;
+    font-weight: bold;   
+    background-color: var(--clr-clearer);
+    border-radius: 1rem;
+    border: none; 
+    color: var(--clr-white) ;
+    cursor: pointer;
+}
+
+.btnClose button:hover{
+    background-color: var(--clr-white);
+    color: var(--clr-clearer);
+    border: 1px solid var(--clr-clearer);
+}
+.titlePage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+    color: var(--clr-main);
+}
+
+aside {
+    flex: 1 1 300px;
+    margin: 30px;
+}
+
+.formBooks {
+    background: var(--clr-white);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 8px  var(--clr-clearer);
+}
+
+.formBooks h2{
+    color: var(--clr-clearer);
+    padding: .5rem ;
+    margin-bottom: 1rem;
+    font-size: 2rem;
+}
+.camposForm {
+    margin-bottom: 15px;
+}
+
+.camposForm label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.inputForm,
+#categoria,
+textarea {
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+input[type="submit"],
+input[type="reset"] {
+    background-color:var(--clr-main);
+    color: var(--clr-white);
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 5px;
+    margin-right: 10px;
+    outline: none;
+}
+
+input[type="submit"]:hover,
+input[type="reset"]:hover {
+    background-color: var(--clr-white);
+    color: var(--clr-main);
+    border: 1px solid var(--clr-main);
+}
+
+/* Estilo para el contenedor de libros */
+.section2 {
+    flex: 2 1 600px;
+}
+
+#container-books {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+#container-books > div {
+    background: var(--clr-white);
+    border-radius: 8px;
+    box-shadow: 0 0 10px var(--clr-clearer);
+    padding: 20px;
+    width: calc(33.333% - 20px);
+    box-sizing: border-box;
+}
+
+.container-img-libro img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: 15px;
+}
+
+.detalles-libro h3 {
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+
+.detalles-libro h4,
+.detalles-libro p {
+    margin-bottom: 8px;
+    font-size: 14px;
+}
+
+button.editLibro,
+button.deleteLibro {
+    background-color: var(--clr-clearer);
+    color: var(--clr-white);
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 14px;
+    border-radius: 5px;
+    margin-right: 5px;
+}
+
+
+
+
+
+
+
+
  /*------------------------------------------------------------*/
  /*------------- Estilios página Costos de Envío -------------*/
  /*------------------------------------------------------------*/
