--- a/css/styles.css
+++ b/css/styles.css
@@ -1479,13 +1479,56 @@ a.footer_link{
     color: var(--clr-main);
 }
 
+.contentAdm {
+    display: flex;
+    justify-content: space-between; 
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+   
+}
+
 aside {
-    flex: 1 1 300px;
-    margin: 30px;
+    flex: 1;
+    margin-left:  20px;   
+}
+
+#container-books {
+    width: 80%;
+}
+#container-books > div {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    border: 1px solid #ccc;
+    width: 95%; 
+    height: 10rem;  
+    padding: 10px;
+    margin-bottom: 5px;
+    margin-left: 30px;
+    background: var(--clr-white);
+    border-radius: 8px;
+    box-shadow: 0 0 10px var(--clr-clearer);
+    padding: 20px;   
+    box-sizing: border-box;
+}
+
+.container-img-libro {
+    flex: 0 0 auto; 
+    width: 5rem;
+}
+
+.detalles-libro {
+    display: flex;
+  flex-direction: row;
+    width:auto;
+    height: auto;
+    margin-left: 1rem;  
+    gap: 1rem
 }
 
 .formBooks {
     background: var(--clr-white);
+    width: 100%;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 8px  var(--clr-clearer);
@@ -1517,18 +1560,23 @@ textarea {
     border-radius: 4px;
 }
 
+
 input[type="submit"],
 input[type="reset"] {
     background-color:var(--clr-main);
     color: var(--clr-white);
     border: none;
-    padding: 10px 20px;
+    padding: 8px 18px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: bold;
     border-radius: 5px;
     margin-right: 10px;
     outline: none;
+}
+
+input[type="submit"]{
+    margin-bottom: 5px;
 }
 
 input[type="submit"]:hover,
@@ -1540,53 +1588,34 @@ input[type="reset"]:hover {
 
 /* Estilo para el contenedor de libros */
 .section2 {
-    flex: 2 1 600px;
-}
-
-#container-books {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-#container-books > div {
-    background: var(--clr-white);
-    border-radius: 8px;
-    box-shadow: 0 0 10px var(--clr-clearer);
-    padding: 20px;
-    width: calc(33.333% - 20px);
-    box-sizing: border-box;
-}
-
-.container-img-libro img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin-bottom: 15px;
+    flex: 2 1 .5rem;
 }
 
 .detalles-libro h3 {
     margin-bottom: 10px;
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .detalles-libro h4,
 .detalles-libro p {
     margin-bottom: 8px;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 button.editLibro,
 button.deleteLibro {
-    background-color: var(--clr-clearer);
+    background-color: var(--clr-main);
     color: var(--clr-white);
     border: none;
     padding: 5px 10px;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 20px;
+    width: 2rem;
+    height: 2rem;
     border-radius: 5px;
-    margin-right: 5px;
+ 
 }
+
 
 
 
